# canto-hk-g2p

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LATIN_PHONETIC_LOAN_DESIGN.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: SOURCES.md  oral_hk.tsv  separable_words.tsv  tone_sandhi_words.tsv  variant_words.tsv
python/canto_g2p/: __init__.py  __init__.pyi  _canto_g2p.pyi
python/canto_hk_g2p/: __init__.py  __init__.pyi  _canto_hk_g2p.pyi  _cmu.py  ipa.py  ipa.pyi  phonology.py  phonology.pyi
scripts/: benchmark.py  build_dict.py  fetch_data.py
src/: g2p.rs  lib.rs  normalizer.rs  pipeline.rs  segment.rs  separable.rs  user_dict.rs
src/dict/: lookup.rs  mod.rs
tests/: test_candidates.py  test_convert_detailed.py  test_ipa.py  test_normalizer.py  test_phonology.py  test_pipeline.py  test_polyphone_regression.py  test_punc_norm.py  test_segmentation_shadow.py  test_user_dict.py  test_v14_normalizer.py
