[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "canto-hk-g2p"
version = "2.4.0"
description = "Fast Cantonese text-to-phoneme (G2P) converter — Jyutping with tone numbers"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = ["cantonese", "g2p", "jyutping", "tts", "nlp", "cantonese-nlp"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: Chinese (Traditional)",
]

[project.urls]
Homepage = "https://github.com/typangaa/canto-hk-g2p"
Repository = "https://github.com/typangaa/canto-hk-g2p"
"Bug Tracker" = "https://github.com/typangaa/canto-hk-g2p/issues"
Changelog = "https://github.com/typangaa/canto-hk-g2p/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7", "maturin>=1.4"]
# Only needed to regenerate data/*.bin via scripts/build_dict.py — NOT a
# runtime dependency, NOT bundled in the wheel (see data/SOURCES.md).
build = ["ToJyutping==3.2.0"]

# PEP 735 dependency groups — used by uv (uv sync --group dev)
[dependency-groups]
dev = ["pytest>=7", "maturin>=1.4"]
build = ["ToJyutping==3.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py38"]
python-source = "python"
module-name = "canto_hk_g2p._canto_hk_g2p"
# Explicitly include generated binary dicts (gitignored but required in the wheel).
include = [
    "python/canto_hk_g2p/data/word.bin",
    "python/canto_hk_g2p/data/char.bin",
    "python/canto_hk_g2p/data/word_candidates.bin",
    "python/canto_hk_g2p/data/char_candidates.bin",
    "python/canto_hk_g2p/data/word_candidates_confidence.bin",
    "python/canto_hk_g2p/data/char_candidates_confidence.bin",
    "python/canto_hk_g2p/data/word_source.bin",
    "python/canto_hk_g2p/data/char_source.bin",
    "python/canto_hk_g2p/data/separable.bin",
    "python/canto_hk_g2p/data/cmudict.dict",
]
